# poo-cioiu-alexandra

./: .clang-tidy  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Exceptions.h  GameEntity.cpp  GameEntity.h  GameWorld.cpp  GameWorld.h  Interaction_Strategy.h  InteractiveObject.cpp  InteractiveObject.h  Item.cpp  Item.h  NPC.cpp  NPC.h  Observer.h  Obstacle.cpp  Obstacle.h  Prop.cpp  Prop.h  README.md  Utiles.h  main.cpp  tastatura.txt
.github/workflows/: cmake.yml
libs/: termcolor.hpp
